# pepper-ros-stack

./: README.md
naoqi_bridge/naoqi_driver_py/launch/: naoqi_driver_new.launch
naoqi_bridge/naoqi_driver_py/src/naoqi_driver/: naoqi_move.py
naoqi_bridge/naoqi_sensors_py/src/naoqi_sensors/: naoqi_camera.py
pepper_robot/pepper_bringup/launch/: pepper_gmapping.launch  pepper_gmapping_gazebo.launch  pepper_gmapping_new.launch
pepper_robot/pepper_description/: CMakeLists.txt
pepper_robot/pepper_description/config/: urdf.rviz
pepper_robot/pepper_description/launch/: pepper_publisher.launch
pepper_robot/pepper_description/urdf/: pepper_from_moveit.urdf
pepper_robot/pepper_description/urdf/pepper1.0_generated_urdf/: pepperGazebo.xacro  pepper_arms.xacro  pepper_gazebo.xacro  pepper_robot.xacro
pepper_virtual/pepper_control/config/: pepper_trajectory_control.yaml
pepper_virtual/pepper_control/launch/: pepper_control_position.launch  pepper_control_trajectory.launch  pepper_control_trajectory_all.launch
pepper_virtual/pepper_gazebo_plugin/: CMakeLists.txt  package.xml
pepper_virtual/pepper_gazebo_plugin/include/: pepper_drive.h  pepper_force_based_drive.h
pepper_virtual/pepper_gazebo_plugin/launch/: pepper_gazebo_plugin_Y20.launch
pepper_virtual/pepper_gazebo_plugin/src/: pepper_drive.cpp  pepper_force_based_drive.cpp
